Fix: image width overflow, removed horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -137,7 +137,6 @@ header {
 
 .content {
   margin-top: 150px;
-  width: 100vw;
   height: 100vh;
   background-size: cover;
   background-position: center;
